--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "fcc-exercise-tracker",
 	"version": "0.1.0",
+	"engines": {
+		"node": "16.13.2"
+	},
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "server.js",
 	"scripts": {
